@@ -558,7 +558,7 @@ public:
    void SetDirty(SaveDirtyState sds);
    void SetNonUndoableDirty(SaveDirtyState sds);
    void CheckDirty();
-   bool FDirty();
+   bool FDirty() const;
 
    void FVerifySaveToClose();
 
@@ -619,6 +619,8 @@ public:
    // Flag that disables all table edition. Lock toggles are counted to identify version changes in a table (for example to guarantee untouched table for tournament)
    bool IsLocked() const { return (m_locked & 1) != 0; }
    void ToggleLock() { m_locked++; }
+
+   bool TournamentModePossible() const { return IsLocked() && !FDirty() && m_pcv->external_script_name.empty(); }
 
 private:
    unsigned int m_locked = 0;
