@@ -596,18 +596,18 @@ BEGIN
     PUSHBUTTON      "Pause",IDC_PAUSEBUTTON,192,212,50,14
     CTEXT           "",IDC_PAUSE,192,227,50,8,SS_CENTERIMAGE
     COMBOBOX        IDC_JOYPAUSECOMBO,192,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "StagedLFlipper",IDC_STAGEDLEFTFLIPPERBUTTON,13,251,50,14
+    GROUPBOX        "",IDC_STATIC,12,251,54,39
+    PUSHBUTTON      "StagedLFlipper",IDC_STAGEDLEFTFLIPPERBUTTON,14,251,50,14
     CTEXT           "",IDC_STAGEDLEFTFLIPPER,13,266,50,8,SS_CENTERIMAGE
-    COMBOBOX        IDC_JOYSTAGEDLFLIPCOMBO,13,275,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "",IDC_STATIC,11,251,54,39
-    PUSHBUTTON      "StagedRFlipper",IDC_STAGEDRIGHTFLIPPERBUTTON,72,251,50,14
+    COMBOBOX        IDC_JOYSTAGEDLFLIPCOMBO,14,275,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "",IDC_STATIC,71,251,54,39
+    PUSHBUTTON      "StagedRFlipper",IDC_STAGEDRIGHTFLIPPERBUTTON,73,251,50,14
     CTEXT           "",IDC_STAGEDRIGHTFLIPPER,72,266,50,8,SS_CENTERIMAGE
-    COMBOBOX        IDC_JOYSTAGEDRFLIPCOMBO,72,275,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_JOYSTAGEDRFLIPCOMBO,73,275,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "",IDC_STATIC,190,251,54,39
     PUSHBUTTON      "Tweak",IDC_TWEAKBUTTON,192,251,50,14
     CTEXT           "",IDC_TWEAK,192,266,50,8,SS_CENTERIMAGE
     COMBOBOX        IDC_JOYTWEAKCOMBO,192,275,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "",IDC_STATIC,70,251,54,39
     CONTROL         "Override Default Button Layout",IDC_DefaultLayout,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,292,112,10
     CONTROL         "Disable ESC Key",IDC_DisableESC_CB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,122,292,68,10
